--- a/starter_code/svm-partial.ipynb
+++ b/starter_code/svm-partial.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -18,7 +18,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -230,7 +230,7 @@
        "[5 rows x 41 columns]"
       ]
      },
-     "execution_count": 2,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -256,14 +256,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "(8744, 40) (8744, 1)\n"
+      "(100, 40) (100, 1)\n"
      ]
     },
     {
@@ -312,16 +312,16 @@
        "dtype: object"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "y = df['koi_disposition'].values.reshape(-1, 1)\n",
-    "#y = y1[:100]\n",
+    "y1 = df['koi_disposition'].values.reshape(-1, 1)\n",
+    "y = y1[:100]\n",
     "\n",
-    "X = df[[\n",
+    "X1 = df[[\n",
     " 'koi_fpflag_nt',\n",
     " 'koi_fpflag_ss',\n",
     " 'koi_fpflag_co',\n",
@@ -363,7 +363,7 @@
     " 'dec',\n",
     " 'koi_kepmag']]\n",
     "\n",
-    "#X = X1.head(100)\n",
+    "X = X1.head(100)\n",
     "\n",
     "print(X.shape, y.shape)\n",
     "X.dtypes"
@@ -371,74 +371,229 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "      koi_fpflag_nt  koi_fpflag_ss  koi_fpflag_co  koi_fpflag_ec  koi_period  \\\n",
-      "8017              0              1              1              0    0.806277   \n",
-      "1233              0              1              1              0    3.582077   \n",
-      "2592              0              0              0              0    5.060923   \n",
-      "4770              0              1              0              1    8.480304   \n",
-      "6632              0              0              0              1    4.994716   \n",
-      "\n",
-      "      koi_period_err1  koi_period_err2  koi_time0bk  koi_time0bk_err1  \\\n",
-      "8017     4.947000e-06    -4.947000e-06   131.785670          0.006720   \n",
-      "1233     4.318000e-06    -4.318000e-06   355.515064          0.000864   \n",
-      "2592     2.616000e-05    -2.616000e-05   134.473160          0.004730   \n",
-      "4770     3.320000e-07    -3.320000e-07   135.854534          0.000031   \n",
-      "6632     4.495000e-05    -4.495000e-05   136.183300          0.009500   \n",
-      "\n",
-      "      koi_time0bk_err2     ...      koi_steff_err2  koi_slogg  koi_slogg_err1  \\\n",
-      "8017         -0.006720     ...              -184.0      4.471           0.054   \n",
-      "1233         -0.000864     ...              -235.0      4.422           0.090   \n",
-      "2592         -0.004730     ...              -112.0      4.492           0.048   \n",
-      "4770         -0.000031     ...              -169.0      3.946           0.195   \n",
-      "6632         -0.009500     ...              -194.0      3.706           0.320   \n",
-      "\n",
-      "      koi_slogg_err2  koi_srad  koi_srad_err1  koi_srad_err2         ra  \\\n",
-      "8017          -0.229     0.996          0.324         -0.108  290.81723   \n",
-      "1233          -0.195     0.993          0.283         -0.131  296.07822   \n",
-      "2592          -0.112     0.911          0.121         -0.060  289.91742   \n",
-      "4770          -0.105     2.210          0.375         -0.563  298.80020   \n",
-      "6632          -0.080     2.830          0.458         -1.068  282.58215   \n",
-      "\n",
-      "            dec  koi_kepmag  \n",
-      "8017  38.539120      13.614  \n",
-      "1233  43.136940      15.193  \n",
-      "2592  40.828606      13.346  \n",
-      "4770  46.665539       7.631  \n",
-      "6632  46.815510      13.352  \n",
-      "\n",
-      "[5 rows x 40 columns]\n",
-      "(6558, 40)\n"
-     ]
-    },
-    {
      "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>koi_fpflag_nt</th>\n",
+       "      <th>koi_fpflag_ss</th>\n",
+       "      <th>koi_fpflag_co</th>\n",
+       "      <th>koi_fpflag_ec</th>\n",
+       "      <th>koi_period</th>\n",
+       "      <th>koi_period_err1</th>\n",
+       "      <th>koi_period_err2</th>\n",
+       "      <th>koi_time0bk</th>\n",
+       "      <th>koi_time0bk_err1</th>\n",
+       "      <th>koi_time0bk_err2</th>\n",
+       "      <th>...</th>\n",
+       "      <th>koi_steff_err2</th>\n",
+       "      <th>koi_slogg</th>\n",
+       "      <th>koi_slogg_err1</th>\n",
+       "      <th>koi_slogg_err2</th>\n",
+       "      <th>koi_srad</th>\n",
+       "      <th>koi_srad_err1</th>\n",
+       "      <th>koi_srad_err2</th>\n",
+       "      <th>ra</th>\n",
+       "      <th>dec</th>\n",
+       "      <th>koi_kepmag</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>15</th>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>19.403938</td>\n",
+       "      <td>0.000021</td>\n",
+       "      <td>-0.000021</td>\n",
+       "      <td>172.484253</td>\n",
+       "      <td>0.000842</td>\n",
+       "      <td>-0.000842</td>\n",
+       "      <td>...</td>\n",
+       "      <td>-151.0</td>\n",
+       "      <td>4.591</td>\n",
+       "      <td>0.072</td>\n",
+       "      <td>-0.048</td>\n",
+       "      <td>0.680</td>\n",
+       "      <td>0.072</td>\n",
+       "      <td>-0.065</td>\n",
+       "      <td>289.25821</td>\n",
+       "      <td>47.635319</td>\n",
+       "      <td>15.487</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>40</th>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>19.651210</td>\n",
+       "      <td>0.000006</td>\n",
+       "      <td>-0.000006</td>\n",
+       "      <td>179.401981</td>\n",
+       "      <td>0.000249</td>\n",
+       "      <td>-0.000249</td>\n",
+       "      <td>...</td>\n",
+       "      <td>-210.0</td>\n",
+       "      <td>4.391</td>\n",
+       "      <td>0.090</td>\n",
+       "      <td>-0.210</td>\n",
+       "      <td>1.063</td>\n",
+       "      <td>0.336</td>\n",
+       "      <td>-0.144</td>\n",
+       "      <td>291.09390</td>\n",
+       "      <td>48.933842</td>\n",
+       "      <td>15.536</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>97</th>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>6.164876</td>\n",
+       "      <td>0.000046</td>\n",
+       "      <td>-0.000046</td>\n",
+       "      <td>135.639160</td>\n",
+       "      <td>0.006610</td>\n",
+       "      <td>-0.006610</td>\n",
+       "      <td>...</td>\n",
+       "      <td>-117.0</td>\n",
+       "      <td>4.406</td>\n",
+       "      <td>0.090</td>\n",
+       "      <td>-0.110</td>\n",
+       "      <td>1.012</td>\n",
+       "      <td>0.154</td>\n",
+       "      <td>-0.103</td>\n",
+       "      <td>300.86398</td>\n",
+       "      <td>44.337551</td>\n",
+       "      <td>12.882</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>9</th>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>16.068647</td>\n",
+       "      <td>0.000011</td>\n",
+       "      <td>-0.000011</td>\n",
+       "      <td>173.621937</td>\n",
+       "      <td>0.000517</td>\n",
+       "      <td>-0.000517</td>\n",
+       "      <td>...</td>\n",
+       "      <td>-83.0</td>\n",
+       "      <td>4.485</td>\n",
+       "      <td>0.083</td>\n",
+       "      <td>-0.028</td>\n",
+       "      <td>0.848</td>\n",
+       "      <td>0.033</td>\n",
+       "      <td>-0.072</td>\n",
+       "      <td>286.99948</td>\n",
+       "      <td>48.375790</td>\n",
+       "      <td>15.841</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>72</th>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1.626630</td>\n",
+       "      <td>0.000001</td>\n",
+       "      <td>-0.000001</td>\n",
+       "      <td>169.820171</td>\n",
+       "      <td>0.000487</td>\n",
+       "      <td>-0.000487</td>\n",
+       "      <td>...</td>\n",
+       "      <td>-172.0</td>\n",
+       "      <td>4.410</td>\n",
+       "      <td>0.124</td>\n",
+       "      <td>-0.186</td>\n",
+       "      <td>0.973</td>\n",
+       "      <td>0.270</td>\n",
+       "      <td>-0.145</td>\n",
+       "      <td>294.36819</td>\n",
+       "      <td>38.310280</td>\n",
+       "      <td>15.279</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>5 rows × 40 columns</p>\n",
+       "</div>"
+      ],
       "text/plain": [
-       "(6558,)"
+       "    koi_fpflag_nt  koi_fpflag_ss  koi_fpflag_co  koi_fpflag_ec  koi_period  \\\n",
+       "15              0              1              0              0   19.403938   \n",
+       "40              0              1              0              0   19.651210   \n",
+       "97              0              0              0              0    6.164876   \n",
+       "9               0              0              0              0   16.068647   \n",
+       "72              0              0              0              0    1.626630   \n",
+       "\n",
+       "    koi_period_err1  koi_period_err2  koi_time0bk  koi_time0bk_err1  \\\n",
+       "15         0.000021        -0.000021   172.484253          0.000842   \n",
+       "40         0.000006        -0.000006   179.401981          0.000249   \n",
+       "97         0.000046        -0.000046   135.639160          0.006610   \n",
+       "9          0.000011        -0.000011   173.621937          0.000517   \n",
+       "72         0.000001        -0.000001   169.820171          0.000487   \n",
+       "\n",
+       "    koi_time0bk_err2     ...      koi_steff_err2  koi_slogg  koi_slogg_err1  \\\n",
+       "15         -0.000842     ...              -151.0      4.591           0.072   \n",
+       "40         -0.000249     ...              -210.0      4.391           0.090   \n",
+       "97         -0.006610     ...              -117.0      4.406           0.090   \n",
+       "9          -0.000517     ...               -83.0      4.485           0.083   \n",
+       "72         -0.000487     ...              -172.0      4.410           0.124   \n",
+       "\n",
+       "    koi_slogg_err2  koi_srad  koi_srad_err1  koi_srad_err2         ra  \\\n",
+       "15          -0.048     0.680          0.072         -0.065  289.25821   \n",
+       "40          -0.210     1.063          0.336         -0.144  291.09390   \n",
+       "97          -0.110     1.012          0.154         -0.103  300.86398   \n",
+       "9           -0.028     0.848          0.033         -0.072  286.99948   \n",
+       "72          -0.186     0.973          0.270         -0.145  294.36819   \n",
+       "\n",
+       "          dec  koi_kepmag  \n",
+       "15  47.635319      15.487  \n",
+       "40  48.933842      15.536  \n",
+       "97  44.337551      12.882  \n",
+       "9   48.375790      15.841  \n",
+       "72  38.310280      15.279  \n",
+       "\n",
+       "[5 rows x 40 columns]"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "from sklearn.model_selection import train_test_split\n",
-    "import numpy as np\n",
     "\n",
-    "X_train, X_test, y_train0, y_test = train_test_split(X, y, random_state=42)\n",
+    "X_train, X_test, y_train, y_test = train_test_split(X, y, random_state=42)\n",
     "\n",
-    "y_train = np.ravel(y_train0)\n",
-    "\n",
-    "print(X_train.head())\n",
-    "print(X_train.shape)\n",
-    "y_train.shape"
+    "X_train.head()"
    ]
   },
   {
@@ -452,7 +607,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -486,15 +641,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "SVC(C=1.0, cache_size=200, class_weight=None, coef0=0.0,\n",
+       "  decision_function_shape='ovr', degree=3, gamma='auto', kernel='linear',\n",
+       "  max_iter=-1, probability=False, random_state=None, shrinking=True,\n",
+       "  tol=0.001, verbose=False)"
+      ]
+     },
+     "execution_count": 7,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "from sklearn.svm import SVC\n",
-    "#import numpy as np\n",
+    "import numpy as np\n",
     "\n",
     "model = SVC(kernel='linear', gamma='auto')\n",
-    "model.fit(X_train, y_train)\n"
+    "model.fit(X_train, np.ravel(y_train,order='C'))\n"
    ]
   },
   {
@@ -642,7 +811,7 @@
    ],
    "source": [
     "# Train the model with GridSearch\n",
-    "grid.fit(X_train_scaled, y_train)"
+    "grid.fit(X_train_scaled, np.ravel(y_train))"
    ]
   },
   {
